continued refactoring to directly use rdf