@@ -1,16 +1,16 @@
 package at.jku.isse.passiveprocessengine.instance.providers;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-
-import at.jku.isse.passiveprocessengine.core.InstanceRepository;
+ 
+import at.jku.isse.passiveprocessengine.rdfwrapper.NodeToDomainResolver;
 import at.jku.isse.passiveprocessengine.rdfwrapper.RDFInstance;
 import at.jku.isse.passiveprocessengine.rdfwrapper.RDFInstanceType;
-import at.jku.isse.passiveprocessengine.core.NodeToDomainResolver;
 import at.jku.isse.passiveprocessengine.instance.types.ProcessConfigBaseElementType;
 import at.jku.isse.passiveprocessengine.rdfwrapper.artifactprovider.ArtifactIdentifier;
 import at.jku.isse.passiveprocessengine.rdfwrapper.artifactprovider.FetchResponse;
@@ -21,11 +21,11 @@ import at.jku.isse.passiveprocessengine.rdfwrapper.artifactprovider.IArtifactPro
 public class ProcessConfigProvider implements IArtifactProvider {
 
 	private final NodeToDomainResolver schemaReg;
-	private final InstanceRepository ws;
+
 	
-	public ProcessConfigProvider(NodeToDomainResolver schemaReg, InstanceRepository ws) {
+	public ProcessConfigProvider(NodeToDomainResolver schemaReg) {
 		this.schemaReg = schemaReg;
-		this.ws = ws;
+
 	}
 	
 	@Override
@@ -35,19 +35,23 @@ public class ProcessConfigProvider implements IArtifactProvider {
 	
 	@Override
 	public RDFInstanceType getDefaultArtifactInstanceType() {
-		return schemaReg.findNonDeletedInstanceTypeByFQN(ProcessConfigBaseElementType.typeId);
+		return schemaReg.findNonDeletedInstanceTypeByFQN(ProcessConfigBaseElementType.typeId).orElse(null);
 	}
 
 	@Override
 	public Set<RDFInstanceType> getProvidedArtifactInstanceTypes() {
-		return Set.of(schemaReg.findNonDeletedInstanceTypeByFQN(ProcessConfigBaseElementType.typeId));				
+		var type = schemaReg.findNonDeletedInstanceTypeByFQN(ProcessConfigBaseElementType.typeId);
+		if (type.isEmpty()) 
+			return Collections.emptySet();
+		else 
+			return Set.of(type.get());				
 	}
 
 	@Override
 	public Set<FetchResponse> fetchArtifact(Set<ArtifactIdentifier> artifactIdentifiers) {
 		return artifactIdentifiers.stream()
 			.map(id -> {
-				Optional<RDFInstance> optInst = ws.findInstanceById(id.getId());
+				Optional<RDFInstance> optInst = schemaReg.findInstanceById(id.getId());
 				if (optInst.isEmpty()) {
 					return new ErrorResponse("No ProcessConfig found for id: "+Objects.toString(id));
 				} else {
